@@ -3,6 +3,7 @@
 	* Update checklist of things to do before a release: Add the new version to the "TYPO3 Core" project in the Bugtracker.
 	* Code cleanup, simplyfying switch for trunk vs. branch releases
 	* Put updating of TYPO_VERSION to separate function updateTypoVersion()
+	* Automatic update of the TYPO_VERSION in config_default.php after the release has been made to the next version number appended with "-dev".
 
 2007-12-02  Ingmar Schlecht  <ingmar@typo3.org>
 
